# dotact-ai

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
config/: cloud_config.yaml  gsi_config.yaml  ui_config.yaml
infra/: .gitignore  README.md  package-lock.json  package.json
infra/lambda/check-access/: index.js  package.json
infra/lambda/process-query/: index.py  requirements.txt
infra/lib/: infra-stack.ts
src/: global_config.py  main.py
src/bootstrap/: __init__.py
src/cloud/: __init__.py  api.py
src/config/: __init__.py  global_config.py
src/data/gsi/: gsi.py  gsi_config.yaml
src/data/gsi/config/: gsi_config.yaml  paths.py
src/data/gsi/extraction/: config_loader.py  extraction.py  game_state.py  game_state_handler.py  gsi_file_setup.py  hero_extractor.py  server_initializer.py  state_manager.py
src/data/gsi/processing/: game_state_processor.py  gsi_data_provider.py
src/data/gsi/server/: gsi_server.py
src/exe/: __init__.py  app_dirs.py  config_manager.py  logging_setup.py
src/gsi/: __init__.py  gsi_config.yaml  gsi_file_setup.py  server.py  state_manager.py
src/llm/: llm.py  llm_config.yaml
src/llm/client/: llm_client.py
src/llm/config/: llm_config.py  paths.py
src/llm/prompt/: prompt_builder.py  response_formatter.py
src/logger/: __init__.py  log_manager.py  logger.py
src/ui/: __init__.py  auth.py  chainlit_app.py  chainlit_helpers.py  history_manager.py  ui.py  ui_config.yaml
src/ui/components/: history_manager.py
src/utils/: __init__.py  paths.py  run_chainlit_entry.py  shutdown.py
(+1 files in other folders)
