[project]
name = "dotact-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.2.1",
    "dota2gsipy>=0.1.0",
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
