[project]
name = "dotact-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.2.1",
    "fastapi>=0.115.8",
    "itsdangerous>=2.2.0",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
